fix: change filter to color, add align-items default

--- a/src/components/blush-alert/blush-alert.scss
+++ b/src/components/blush-alert/blush-alert.scss
@@ -21,6 +21,7 @@
     .content {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         gap: spacing(1);
         flex-grow: 1;
 
@@ -51,7 +52,7 @@
         border-left-color: map.get($success-absolute, '001');
 
         .icon {
-            filter:  map.get($filter, 'success-001');
+            color: map.get($success-absolute, '001');
         }
 
         .content {
@@ -65,7 +66,7 @@
         border-left-color: map.get($warning-absolute, '001');
 
         .icon {
-            filter:  map.get($filter, 'warning-001');
+            color: map.get($warning-absolute, '001');
         }
 
         .content {
@@ -79,7 +80,7 @@
         border-left-color: map.get($error-absolute, '001');
 
         .icon {
-            filter:  map.get($filter, 'danger-001');
+            color: map.get($error-absolute, '001');
         }
 
         .content {
@@ -93,7 +94,7 @@
         border-left-color: map.get($neutral, '004');
 
         .icon {
-            filter:  map.get($filter, 'neutral-004');
+            color: map.get($neutral, '004');
         }
 
         .content {
