--- a/src/components/blush-modal/blush-modal.scss
+++ b/src/components/blush-modal/blush-modal.scss
@@ -81,7 +81,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '013');
 			
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-013')
+				color: map.get($neutral, '013');
 			}
 
 			.header {
@@ -99,7 +99,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '003');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-008')
+				color: map.get($neutral, '008');
 			}
 
 			.header {
@@ -117,7 +117,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '013');
 
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-013')
+				color: map.get($neutral, '013');
 			}
 	
 			.header {
@@ -135,7 +135,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '003');
 
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-008')
+				color: map.get($neutral, '008');
 			}
 	
 			.header {
@@ -153,7 +153,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '013');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-013')
+				color: map.get($neutral, '013');
 			}
 
 			.header {
@@ -171,7 +171,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '003');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-008')
+				color: map.get($neutral, '008');
 			}
 
 			.header {
@@ -189,7 +189,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '013');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-013')
+				color: map.get($neutral, '013');
 			}
 
 			.header {
@@ -207,7 +207,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '003');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-008')
+				color: map.get($neutral, '008');
 			}
 
 			.header {
@@ -225,7 +225,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '013');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-013')
+				color: map.get($neutral, '013');
 			}
 
 			.header {
@@ -243,7 +243,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '003');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-008')
+				color: map.get($neutral, '008');
 			}
 
 			.header {
@@ -261,7 +261,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '013');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-013')
+				color: map.get($neutral, '013');
 			}
 
 			.header {
@@ -279,7 +279,7 @@ $size-dismiss-icon: 24px;
 			color: map.get($neutral, '005');
 	
 			> .dismiss-icon {
-				filter: map.get($filter, 'neutral-008')
+				color: map.get($neutral, '008');
 			}
 
 			.header {
