--- a/src/components/blush-toast/blush-toast.scss
+++ b/src/components/blush-toast/blush-toast.scss
@@ -16,6 +16,7 @@
     .content {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         gap: spacing(1);
         flex-grow: 1;
 
@@ -46,7 +47,7 @@
         background-color: map.get($success-absolute, '007');
 
         .icon {
-            filter:  map.get($filter, 'success-001');
+            color: map.get($success-absolute, '001');
         }
 
         .content {
@@ -60,7 +61,7 @@
         background-color: map.get($warning-absolute, '007');
 
         .icon {
-            filter:  map.get($filter, 'warning-001');
+            color: map.get($warning-absolute, '001');
         }
 
         .content {
@@ -74,7 +75,7 @@
         background-color: map.get($error-absolute, '007');
 
         .icon {
-            filter:  map.get($filter, 'danger-001');
+            color: map.get($error-absolute, '001');
         }
 
         .content {
@@ -88,7 +89,7 @@
         background-color: map.get($neutral, '013');
 
         .icon {
-            filter:  map.get($filter, 'neutral-004');
+            color: map.get($neutral, '004');
         }
 
         .content {
